--- a/compose.yml
+++ b/compose.yml
@@ -60,6 +60,8 @@ services:
     - database:database
     volumes:
     - mailman-web:/opt/mailman-web-data
+    - ./init-mailman-core.sh:/opt/mailman-web/init-mailman-core.sh
+    - ./init-stalwart.sh:/opt/mailman-web/init-stalwart.sh
     - ./fixtures.json:/opt/mailman-web/fixtures.json
     environment:
     - DATABASE_TYPE=postgres
